--- a/OrderService/src/main/resources/application.yml
+++ b/OrderService/src/main/resources/application.yml
@@ -1,6 +1,31 @@
 spring:
   application:
     name: OrderService
+  cloud:
+    function:
+      definition: consumeAck
+
+    stream:
+      bindings:
+        # configure spring cloud stream - receive order notification
+        orderCreatedEvent-out-0:
+          destination: order.created
+          contentType: application/json
+          group: ${spring.application.name}
+        # configure spring cloud stream - receive order notification
+        consumeAck-in-0:
+          destination: order.ack
+          contentType: application/json
+          group: ${spring.application.name}
+  # configure rabbitMQ
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+# configure spring cloud stream
+
+
 
 server:
   port: 9098
